// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boundary addBoundary, no boundaries 1`] = `
{
  "boundaryTypes": {
    "myType": {
      "clusterGroup": {
        "addLayer": [MockFunction] {
          "calls": [
            [
              NewClass {
                "_bounds": {},
                "_events": {
                  "click": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "keypress": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseout": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseover": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "move": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "remove": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                },
                "_initHooksCalled": true,
                "_latlngs": [
                  [],
                ],
                "_popup": NewClass {
                  "_content": "<h3>myLocation <img src="/markers/marker-unknown.svg" style="width:20px; height:20px" type="image/svg" title="State: unknown"></h3><h6>myType</h6>",
                  "_initHooksCalled": true,
                  "_source": [Circular],
                  "options": {},
                },
                "_popupHandlersAdded": true,
                "feature": {
                  "properties": {
                    "id": "id123",
                    "name": "myLocation",
                    "state": "unknown",
                    "totalCases": undefined,
                    "type": "myType",
                    "url": "undefinedid123",
                  },
                },
                "options": {
                  "color": "#03d3fc",
                },
              },
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
  },
  "configParams": {
    "tooltipProperties": [],
  },
}
`;

exports[`boundary addBoundary, status 1`] = `
{
  "boundaryTypes": {
    "myType": {
      "clusterGroup": {
        "addLayer": [MockFunction] {
          "calls": [
            [
              NewClass {
                "_bounds": {},
                "_events": {
                  "click": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "keypress": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseout": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseover": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "move": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "remove": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                },
                "_initHooksCalled": true,
                "_latlngs": [
                  [],
                ],
                "_popup": NewClass {
                  "_content": "<h3>myLocation <img src="/markers/marker-major.svg" style="width:20px; height:20px" type="image/svg" title="State: major"></h3><h6>myType</h6>",
                  "_initHooksCalled": true,
                  "_source": [Circular],
                  "options": {},
                },
                "_popupHandlersAdded": true,
                "feature": {
                  "properties": {
                    "id": "id123",
                    "name": "myLocation",
                    "state": "major",
                    "totalCases": undefined,
                    "type": "myType",
                    "url": "undefinedid123",
                  },
                },
                "options": {
                  "color": "#fc991e",
                },
              },
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
  },
  "configParams": {
    "tooltipProperties": [],
  },
}
`;

exports[`boundary addBoundary, tooltips 1`] = `
{
  "boundaryTypes": {
    "myType": {
      "clusterGroup": {
        "addLayer": [MockFunction] {
          "calls": [
            [
              NewClass {
                "_bounds": {},
                "_events": {
                  "click": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "keypress": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseout": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseover": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "move": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "remove": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                },
                "_initHooksCalled": true,
                "_latlngs": [
                  [],
                ],
                "_popup": NewClass {
                  "_content": "<h3>myLocation <img src="/markers/marker-unknown.svg" style="width:20px; height:20px" type="image/svg" title="State: unknown"></h3><h6>myType</h6><h7> tooltipProp: showThis</h7>",
                  "_initHooksCalled": true,
                  "_source": [Circular],
                  "options": {},
                },
                "_popupHandlersAdded": true,
                "feature": {
                  "properties": {
                    "id": "id123",
                    "name": "myLocation",
                    "state": "unknown",
                    "totalCases": undefined,
                    "type": "myType",
                    "url": "undefinedid123",
                  },
                },
                "options": {
                  "color": "#03d3fc",
                },
              },
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
  },
  "configParams": {
    "tooltipProperties": [
      "tooltipProp",
      "tryToShowThis",
    ],
  },
}
`;

exports[`boundary updateBoundary, no boundaries 1`] = `
{
  "boundaryTypes": {
    "myType": {
      "clusterGroup": {
        "addLayer": [MockFunction],
      },
    },
  },
  "configParams": {
    "tooltipProperties": [],
  },
}
`;

exports[`boundary updateBoundary, previous boundary 1`] = `
{
  "boundaryTypes": {
    "myType": {
      "boundaries": {
        "id123": NewClass {
          "_bounds": {},
          "_initHooksCalled": true,
          "_latlngs": [
            [],
          ],
          "feature": {
            "properties": {
              "id": "id123",
              "name": "myLocation",
              "state": "unknown",
              "totalCases": undefined,
              "type": "myType",
              "url": "undefinedid123",
            },
          },
          "options": {
            "color": "#03d3fc",
          },
        },
      },
      "clusterGroup": {
        "addLayer": [MockFunction],
      },
    },
  },
  "configParams": {
    "tooltipProperties": [],
  },
}
`;
